--- a/client/src/components/expensesByCategory/expensesByCategory.css
+++ b/client/src/components/expensesByCategory/expensesByCategory.css
@@ -21,12 +21,16 @@
 }
 
 .item__category_container {
-  width: 30%;
+  align-items: center;
+  min-width: 0;
 }
 
 .item__category {
   font-size: 0.8rem;
-  text-overflow: clip;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   background-color: var(--color-2);
   color: var(--color-1);
   padding: 0.3rem 0.3rem;
